--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Henrik T Sykora <henrik.sykora@gmail.com> and contributors"]
 version = "0.1.0"
 
 [deps]
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 
