--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 
 [compat]
+GridInterpolations = "1"
 julia = "1"
 
 [extras]
