--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 ThreadedSparseArrays = "59d54670-b8ac-4d81-ab7a-bb56233e17ab"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 
 [compat]
 Symbolics = "4"
