--- a/Project.toml
+++ b/Project.toml
@@ -18,7 +18,7 @@ ThreadedSparseArrays = "59d54670-b8ac-4d81-ab7a-bb56233e17ab"
 [compat]
 Distributions = "0.25"
 FFTW = "1"
-FastGaussQuadrature = "0.4"
+FastGaussQuadrature = "0.4, 0.5"
 QuadGK = "2"
 Reexport = "1"
 StaticArrays = "1"
